--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@ Homestead.yaml
 npm-debug.log
 yarn-error.log
 .env
+public/app/assets/bootstrap/js/moment.min.js
+public/app/assets/bootstrap/js/moment.min.js
